# Person_ex

./: CMakeLists.txt  Person.cpp  Person.h  main.cpp
